# massive-dataset-indexing

./: .gitignore  README.md  pyproject.toml  pyspark_bplustree_mapreduce.py  requirements.txt  tree_index_framework.py
Doc/Project Proposal/: CSC502 - Course Project Proposal.docx
configs/: distributed_bplustree.json  distributed_kdtree.json  distributed_quadtree.json  distributed_rtree.json  local_demo.json
results/: distributed-bplustree-20260319-004958.json  distributed-bplustree-20260319-004958.txt  distributed-kdtree-20260319-144819.json  distributed-kdtree-20260319-144819.txt  distributed-quadtree-20260319-155802.json  distributed-quadtree-20260319-155802.txt  distributed-rtree-20260319-175534.json  distributed-rtree-20260319-175534.txt  local-demo-20260318-235152.txt
src/treeindex/: __init__.py
src/treeindex/cli/: run_distributed_bplustree.py  run_distributed_kdtree.py  run_distributed_quadtree.py  run_distributed_rtree.py  run_local_demo.py
src/treeindex/core/: interfaces.py  results.py
src/treeindex/data/: generators.py
src/treeindex/experiments/: benchmark.py  scenarios.py
src/treeindex/geometry/: point.py  rect.py
src/treeindex/indexes/distributed/: base.py  pyspark_bplustree.py  pyspark_kdtree.py  pyspark_quadtree.py  pyspark_rtree.py
src/treeindex/indexes/local/: bplustree.py  kdtree.py  (+2 more)
src/treeindex/registry/: factories.py
src/treeindex/utils/: config.py  reporting.py  table.py
tests/: pyspark_smoke.py  smoke_test.py  test_bplustree.py  test_distributed_rtree.py  test_kdtree.py  test_quadtree.py  test_reporting.py  test_scenarios.py
